# sae_align

./: .gitignore  LICENSE  README.md  README_ACTIONIV_PATCH.md  README_PATCH.md  README_STAGEC0_PATCH.md  README_STAGED0P_PATCH.md  README_STAGED0_PATCH.md  pyproject.toml
configs/: actioniv_task_oracle_destroy.json  actioniv_task_oracle_synthetic.json  stage0_toy.json  stage0_v1.json  stage0_v1_large.json  stagec0_toy.json  staged0_datasets.example.txt  staged0_powderworld.json  staged0_toy_smoke.json  staged0p_datasets.example.txt
docs/: actioniv_d0_gate_postmortem.md  actioniv_powderworld_notes.md  actioniv_precommit.md  actioniv_protocol.md  actioniv_v1_task_oracle_experiment.md  alignment_metric_notes.md  changelog.md  channel_specification.md  experiment_pause_for_survey.md  experiment_roadmap.md  framing_d_aera_precommit.md  how_to_extend.md  metrics.md  project_pivot_memo.md  repo_design_references.md  research_context.md  stage0_next_steps.md  stage0_protocol.md  stageb2_v1_cpu_experiment.md  stageb3_preregistration.md  stageb3_v1_cpu_experiment.md  stageb4_preregistration.md  stageb4_v1_cpu_experiment.md  stageb5_preregistration.md  stageb5_v1_cpu_experiment.md  stageb6_preregistration.md  stageb6_primary_cell_v1_cpu_experiment.md  stageb6_realpw_v1_cpu_experiment.md  stageb6_static_control_postmortem.md  stageb6_v1_cpu_experiment.md  stageb6r_preregistration.md  stageb6r_v1_cpu_experiment.md  stageb_status.md  stagec05_precommit.md  stagec05_v1_cpu_experiment.md  stagec0_patch_notes.md  stagec0_preregistration.md  stagec0_result_template.md  stagec0_status.md  (+12 more)
(+91 files in other folders)
