[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sae-align"
version = "0.1.0"
description = "Starter repo for stratified action-effect alignment experiments."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kohsuke Ide" }]
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
